# i3-app-launcher

./: README.md
i3-app-launcher/: CMakeLists.txt  example_config  setup.sh
i3-app-launcher/src/: config.hpp  main.cpp
